# LLM-Robot

./: .gitignore  .gitmodules  chat_pick_up.py  coord_converter.py  install.sh  run.sh
LLM/: gdino_openai.py  gdino_prompt.md  main_openai.py  main_prompt.md
flexiv/: CMakeLists.txt  data_converter.py  data_generator.py  home.cpp  run.cpp
flexiv/base/: CMakeLists.txt  main.cpp
planning/: pick_place_1.py  pick_place_3.py  pick_up_example.py
planning/controllers/: pick_place.py  rmpflow.py
planning/rmpflow/: flexiv_rizon4_total.urdf  rmpflow_config.yaml  robot_descriptor.yaml
planning/tasks/: follow_target.py  my_gripper.py  my_pick_place.py  pick_place.py
